Suppliers and Statements

--- a/angular/src/app/shared/sidebar/sidebar.component.html
+++ b/angular/src/app/shared/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
     <!-- Sidebar Header starts -->
     <div class="brand-logo bg-theme bg-theme1">
       <img src="assets/images/logo-icon.png" class="logo-icon" alt="logo icon">
-      <h5 class="logo-text">Smart Metering</h5>
+      <h5 class="logo-text">Smart Utilities</h5>
       <div class="close-btn" (click)="toggleSidebar()"><i class="zmdi zmdi-close"></i></div>
     </div>
     <!-- Sidebar Header Ends -->
