--- a/angular/src/app/pages/suppliers/suppliers.component.html
+++ b/angular/src/app/pages/suppliers/suppliers.component.html
@@ -33,7 +33,7 @@
               <ng-template let-value="value" let-row="row" ngx-datatable-cell-template>
                 <a href="javascript: void(0);"><i class="fa fa-trash-o font-size-18 text-danger mr-2"></i></a>
                 <a href="javascript: void(0);"><i class="fa fa-pencil font-size-18 text-success mr-2"></i></a>
-                <a href="javascript: void(0);"><i class="fa fa-eye font-size-18 text-primary"></i></a>
+                <a href="javascript: void(0);" (click)="view(row.id)"><i class="fa fa-eye font-size-18 text-primary"></i></a>
               </ng-template>
             </ngx-datatable-column>
 
